Сверстал хедер наконец то

--- a/sass/page__header.scss
+++ b/sass/page__header.scss
@@ -1,19 +1,21 @@
 .page__header {
   border-bottom: 1px solid #ececec;
   border-top: 1px solid #ececec;
+  position: relative;
 }
 
 .header__wrap {
-  display: flex;
-  align-items: center;
   min-height: 78px;
+  width: 82.25%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .header__logo_link {
-  display: inline-block;
-  vertical-align: baseline;
-  margin-top: 4px;
   margin-left: calc(50% - 43px);
+  margin-right: auto;
 }
 
 .header__logo_img {
@@ -27,30 +29,51 @@
 }
 
 .main_nav {
-  width: 100%;
   background-color: #ffffff;
-  position: relative;
   font-size: 17px;
   font-weight: bold;
   line-height: 24px;
   z-index: 10;
+  width: 100%;
+  display: flex;
 }
 
 .header__menu {
+  background-color: #ffffff;
   display: none;
   position: absolute;
-  z-index: 20;
+  top: 80px;
   left: 0;
-  background-color: #ffffff;
-  width: 100%;
+  width: 123.0769230769231%;
+  flex-direction: column;
 }
 
 .header__site_menu {
-  top: 60px;
+
+  .header__link {
+    padding-left: 75px;
+  }
 }
 
 .header__user_menu {
-  top: 218px;
+  margin-top: 160px;
+
+  .header__link {
+    padding-left: 30px;
+  }
+}
+.header__link_search {
+
+  .header__link_span {
+    padding-left: 27px;
+  }
+}
+
+.header__link_cart {
+
+  .header__link_span {
+    padding-left: 20px;
+  }
 }
 
 .menu_close {
@@ -72,17 +95,13 @@
   }
 
   &:checked + .header__label ~ .header__menu {
-    display: block;
+    display: flex;
   }
 }
 
 .header__label {
-  margin-left: 19.6875%;
-  position: relative;
-  top: -11px;
-  width: 20px;
-  height: 30px;
   background-color: #ffffff;
+  margin-top: 7px;
 }
 
 .header__site_menu,
@@ -91,11 +110,12 @@
 }
 
 .header__link {
-  display: block;
-  height: 78px;
   border-bottom: 1px solid #ececec;
   text-decoration: none;
   color: #000000;
+  display: flex;
+  align-items: center;
+  height: 80px;
 
   &:hover {
     color: rgba(0, 0, 0, 0.6);
@@ -120,15 +140,25 @@
   display: none;
 }
 
+.header__new {
+  display: none;
+}
+
+.header__sale {
+  display: none;
+}
+
 @media screen and (min-width: 768px) {
   .page__header {
-    border: 0;
+    width: 100%;
     border-top: 1px solid #ececec;
+    background-color: #ffffff;
+    z-index: 1;
   }
 
   .header__wrap {
-    align-items: initial;
-    padding: 0;
+    width: 678px;
+    height: 87px;
   }
 
   .header__label {
@@ -136,202 +166,255 @@
   }
 
   .main_nav {
-    position: static;
-    display: flex;
     flex-wrap: wrap;
+    position: relative;
+  }
+
+  .header__logo_link {
     margin: 0;
-    background-color: transparent;
+    width: 325px;
+    order: 0;
+    display: flex;
+    align-items: center;
   }
 
   .header__logo_img {
-    margin-top: 25px;
+    width: 115px;
+    height: auto;
+    margin-top: 6px;
   }
 
   .header__menu {
     display: flex;
     position: static;
+
+    .header__link {
+      height: 87px;
+    }
   }
 
-  .header__logo_link {
-    margin: 0;
-    text-align: left;
-    justify-content: flex-start;
-    padding-left: 50px;
-    border-bottom: 1px solid #ececec;
-    height: 88px;
-    width: 48.30729166666667%;
-  }
-
-  .header__link_inner {
-    margin-left: -2px;
-  }
-
-  .header__link_span {
-    margin-left: 25px;
-  }
-
-  .header__site_menu {
-    position: relative;
-    top: -24px;
-    order: 2;
-    display: flex;
-    justify-content: space-between;
-    margin-left: 50px;
-    width: 49%;
-    font-size: 15px;
-    background-color: transparent;
-  }
-
+//////////////////////////////////////////////// user_menu
   .header__user_menu {
-    order: 1;
     display: flex;
-    flex-wrap: wrap;
-    margin-left: auto;
-    width: 51.69270833333333%;
-    background-color: transparent;
-  }
-
-  .header__user_menu .header__link {
-    border-left: 1px solid #ececec;
-    height: 88px;
-  }
-
-  .header__site_menu .header__link {
+    flex-direction: row;
+    width: 344px;
+    margin: 0;
     border: 0;
-    height: auto;
+    order: 1;
   }
 
-  .header__link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: transparent;
-  }
-
-  .header__item {
-    background-color: transparent;
-  }
 
   .header__item_search {
-    width: 84px;
+
+    .header__link {
+      width: 84px;
+      border: 0;
+      border-left: 1px solid #ececec;
+      border-right: 1px solid #ececec;
+    }
+
+    .header__link_span {
+      display: none;
+    }
   }
 
   .header__item_cart {
-    width: calc(100% - 84px);
-  }
+    width: 265px;
 
-  .header__link_search {
-    font-size: 0;
-    border-right: 0;
-  }
+    .header__link {
+      border: 0;
+      width: 100%;
+    }
 
-  .header__link_cart {
-    padding-left: 10.12658227848101%;
-    justify-content: flex-start;
-  }
+    .header__link_inner {
+      width: 100%;
+    }
 
-  .header__bottom {
-    display: none;
+    .header__link_span {
+      padding-left: 24px;
+    }
   }
 
   .header__delivery {
+    position: absolute;
     display: block;
-    margin-top: 17px;
+    top: 105px;
+    left: 63.80208333333333%;
     font-size: 15px;
     line-height: 24px;
     font-weight: normal;
-    margin-left: 84px;
-    padding-left: 8%;
     width: 100%;
     text-align: left;
     background-color: transparent;
   }
+
+/////////////////////////////////////////////////////  site_menu
+  .header__site_menu {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+    order: 2;
+    background-color: transparent;
+    left: 4px;
+    top: 72px;
+
+    .header__item {
+      height: auto;
+    }
+
+    .header__link {
+      border: 0;
+      padding: 0;
+      font-size: 15px;
+    }
+  }
+  .header__item_order {
+    margin-left: 36px;
+  }
+
 }
 
 @media screen and (min-width: 1250px) {
+  .page__header {
+    width: 100%;
+    border-top: 1px solid #ececec;
+    background-color: #ffffff;
+    z-index: 1;
+}
+
   .header__wrap {
-    padding: 0 50px;
+    width: 1050px;
+    height: 87px;
+  }
+
+  .header__label {
+    display: none;
+  }
+
+  .main_nav {
+    flex-wrap: wrap;
+    position: relative;
   }
 
   .header__logo_link {
-    display: block;
-    order: 1;
-    width: calc(100% - (100% - 249px));
-    padding: 0;
-    border-width: 0;
-    border-bottom: 1px solid #ececec;
-    padding-left: 4%;
-  }
-
-  .header__site_menu {
-    position: static;
-    display: flex;
-    flex-wrap: wrap;
-    order: 0;
-    width: 44%;
     margin: 0;
-    font-size: 17px;
-    justify-content: flex-start;
-
-    .header__item_catalog {
-      width: 47%;
-      border-right: 1px solid #ececec;
-      padding-left: 50px;
-    }
-
-    .header__item_order {
-      padding-left: 35px;
-      width: 53%;
-    }
-
-    .header__link {
-      height: 88px;
-      justify-content: flex-start;
-    }
+    width: 150px;
+    order: 1;
+    display: flex;
+    align-items: center;
   }
 
-  .header__user_menu {
-    order: 2;
-    width: calc(100% - 44% - 249px);
-
-    .header__link {
-      border-bottom: 0;
-    }
-  }
-
-  .header__link_inner {
-    margin-left: 4px;
-  }
-
-  .header__link_span {
-    display: inline-block;
-    vertical-align: baseline;
-    margin-bottom: 3px;
+  .header__logo_img {
+    width: 149px;
+    height: auto;
+    margin-top: 6px;
   }
 
   .header__menu {
-    .header__bottom {
-      display: block;
-      margin: 0;
-      margin-top: 18px;
-      height: auto;
+    display: flex;
+    position: static;
+
+    .header__link {
+      height: 87px;
+    }
+  }
+
+  //////////////////////////////////////////////// user_menu
+  .header__user_menu {
+    display: flex;
+    flex-direction: row;
+    width: 450px;
+    margin: 0;
+    border: 0;
+    order: 2;
+    padding-left: 100px;
+  }
+
+
+  .header__item_search {
+    .header__link {
+      width: 84px;
+      border: 0;
+      border-left: 1px solid #ececec;
+      border-right: 1px solid #ececec;
+    }
+
+    .header__link_span {
+      display: none;
+    }
+  }
+
+  .header__item_cart {
+    width: 265px;
+
+    .header__link {
+      border: 0;
       width: 100%;
+    }
+
+    .header__link_inner {
+      width: 100%;
+    }
+
+    .header__link_span {
+      padding-left: 24px;
+    }
+  }
+
+  .header__delivery {
+    position: absolute;
+    display: block;
+    top: 105px;
+    left: 78.0952380952381%;
+    font-size: 15px;
+    line-height: 24px;
+    font-weight: normal;
+    width: 100%;
+    text-align: left;
+    background-color: transparent;
+  }
+
+  /////////////////////////////////////////////////////  site_menu
+  .header__site_menu {
+    display: flex;
+    flex-direction: row;
+    width: 450px;
+    margin: 0;
+    order: 0;
+    background-color: transparent;
+    left: 4px;
+    top: 72px;
+
+    .header__item {
+      height: auto;
+    }
+
+    .header__link {
+      border: 0;
+      padding: 0;
+      font-size: 17px;
+    }
+  }
+
+  .header__item_order {
+    margin-left: 35px;
+    border-left: 1px solid #ececec;
+    padding-left: 35px;
+  }
+
+  .header__new,
+  .header__sale {
+    display: block;
+    position: absolute;
+    top: 75px;
+    left: 0;
+
+    .header__link {
       font-size: 15px;
     }
-
-    .header__top {
-      border-bottom: 1px solid #ececec;
-      height: 88px;
-    }
   }
-
-  .header__new {
-    width: 47%;
-    padding-left: 50px;
-  }
-
   .header__sale {
-    width: 53%;
-    padding-left: 34px;
+    left: 220px;
   }
 }
