--- a/css/home.css
+++ b/css/home.css
@@ -19,6 +19,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column; }
+  @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    .home__wrap {
+      background-image: url("../img/hero-mobile@2x.jpg"); } }
 
 .main__title {
   position: relative;
@@ -85,14 +88,19 @@
   .home {
     position: relative; }
   .home__wrap {
-    min-height: 755px;
     background-image: url("../img/hero-tablet@1x.jpg");
     background-size: 172%;
     background-position: 50% 0;
+    min-height: 755px;
     width: 668px;
     margin: 0 auto;
     position: relative;
-    background-color: #fafafa; }
+    background-color: #fafafa; } }
+  @media screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 768px) and (min-resolution: 144dpi), screen and (min-width: 768px) and (min-resolution: 1.5dppx) {
+    .home__wrap {
+      background-image: url("../img/hero-tablet@2x.jpg"); } }
+
+@media screen and (min-width: 768px) {
   .main__title {
     font-size: 43px;
     line-height: 50px;
@@ -154,29 +162,36 @@
     left: 0;
     width: 100%;
     height: 25px;
-    background-image: url("../img/wave.png");
-    background-size: 40px 24px;
-    background-position: bottom left;
-    background-repeat: repeat-x;
-    z-index: 999; } }
+    background-image: url("../img/bg-zigzag-fill.svg");
+    background-size: 100% 34px;
+    background-position: -5px left;
+    z-index: 1; } }
 
 @media screen and (min-width: 1250px) {
   .page__main {
     position: relative;
     top: -42px; }
+  .home {
+    width: 100%;
+    margin: 0 auto; }
   .home__wrap {
     min-height: 755px;
     width: 1050px;
     margin: 0 auto;
-    background-size: 100%;
-    background-position: 50% -15px; }
+    background-image: url("../img/hero-desktop@1x.jpg");
+    background-size: 117%;
+    background-position: 50% -25px; } }
+  @media screen and (min-width: 1250px) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 1250px) and (min-resolution: 144dpi), screen and (min-width: 1250px) and (min-resolution: 1.5dppx) {
+    .home__wrap {
+      background-image: url("../img/hero-desktop@2x.jpg"); } }
+
+@media screen and (min-width: 1250px) {
   .main__title {
     font-size: 53px;
     line-height: 57px;
     width: auto;
     position: relative;
-    left: 10px;
-    top: 138px; }
+    top: 136px; }
   .home__inner {
     width: 1050px;
     min-width: 1050px; }
@@ -194,4 +209,6 @@
     position: relative;
     top: -5px;
     font-size: 20px;
-    line-height: 30px; } }
+    line-height: 30px; }
+  .home__img {
+    left: 0; } }
