--- a/css/page__header.css
+++ b/css/page__header.css
@@ -1,21 +1,24 @@
 .page__header {
   border-bottom: 1px solid #ececec;
-  border-top: 1px solid #ececec; }
+  border-top: 1px solid #ececec;
+  position: relative; }
 
 .header__wrap {
+  min-height: 78px;
+  width: 82.25%;
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
-          align-items: center;
-  min-height: 78px; }
+          align-items: center; }
 
 .header__logo_link {
-  display: inline-block;
-  vertical-align: baseline;
-  margin-top: 4px;
-  margin-left: calc(50% - 43px); }
+  margin-left: calc(50% - 43px);
+  margin-right: auto; }
 
 .header__logo_img:hover {
   opacity: 0.6; }
@@ -24,27 +27,41 @@
   opacity: 0.3; }
 
 .main_nav {
-  width: 100%;
   background-color: #ffffff;
-  position: relative;
   font-size: 17px;
   font-weight: bold;
   line-height: 24px;
-  z-index: 10; }
+  z-index: 10;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
 
 .header__menu {
+  background-color: #ffffff;
   display: none;
   position: absolute;
-  z-index: 20;
+  top: 80px;
   left: 0;
-  background-color: #ffffff;
-  width: 100%; }
+  width: 123.0769230769231%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
 
-.header__site_menu {
-  top: 60px; }
+.header__site_menu .header__link {
+  padding-left: 75px; }
 
 .header__user_menu {
-  top: 218px; }
+  margin-top: 160px; }
+  .header__user_menu .header__link {
+    padding-left: 30px; }
+
+.header__link_search .header__link_span {
+  padding-left: 27px; }
+
+.header__link_cart .header__link_span {
+  padding-left: 20px; }
 
 .menu_close {
   display: none; }
@@ -57,26 +74,29 @@
   .header__input:checked + .header__label .menu_close {
     display: inline-block; }
   .header__input:checked + .header__label ~ .header__menu {
-    display: block; }
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
 
 .header__label {
-  margin-left: 19.6875%;
-  position: relative;
-  top: -11px;
-  width: 20px;
-  height: 30px;
-  background-color: #ffffff; }
+  background-color: #ffffff;
+  margin-top: 7px; }
 
 .header__site_menu,
 .header__user_menu {
   list-style: none; }
 
 .header__link {
-  display: block;
-  height: 78px;
   border-bottom: 1px solid #ececec;
   text-decoration: none;
-  color: #000000; }
+  color: #000000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 80px; }
   .header__link:hover {
     color: rgba(0, 0, 0, 0.6); }
   .header__link:hover .header__item_icon {
@@ -91,187 +111,230 @@
 .header__delivery {
   display: none; }
 
+.header__new {
+  display: none; }
+
+.header__sale {
+  display: none; }
+
 @media screen and (min-width: 768px) {
   .page__header {
-    border: 0;
-    border-top: 1px solid #ececec; }
+    width: 100%;
+    border-top: 1px solid #ececec;
+    background-color: #ffffff;
+    z-index: 1; }
   .header__wrap {
-    -webkit-box-align: initial;
-        -ms-flex-align: initial;
-            align-items: initial;
-    padding: 0; }
+    width: 678px;
+    height: 87px; }
   .header__label {
     display: none; }
   .main_nav {
-    position: static;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    margin: 0;
-    background-color: transparent; }
-  .header__logo_img {
-    margin-top: 25px; }
-  .header__menu {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    position: static; }
+    position: relative; }
   .header__logo_link {
     margin: 0;
-    text-align: left;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    padding-left: 50px;
-    border-bottom: 1px solid #ececec;
-    height: 88px;
-    width: 48.30729166666667%; }
-  .header__link_inner {
-    margin-left: -2px; }
-  .header__link_span {
-    margin-left: 25px; }
-  .header__site_menu {
-    position: relative;
-    top: -24px;
-    -webkit-box-ordinal-group: 3;
-        -ms-flex-order: 2;
-            order: 2;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    margin-left: 50px;
-    width: 49%;
-    font-size: 15px;
-    background-color: transparent; }
-  .header__user_menu {
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    margin-left: auto;
-    width: 51.69270833333333%;
-    background-color: transparent; }
-  .header__user_menu .header__link {
-    border-left: 1px solid #ececec;
-    height: 88px; }
-  .header__site_menu .header__link {
-    border: 0;
-    height: auto; }
-  .header__link {
+    width: 325px;
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    background-color: transparent; }
-  .header__item {
-    background-color: transparent; }
-  .header__item_search {
-    width: 84px; }
-  .header__item_cart {
-    width: calc(100% - 84px); }
-  .header__link_search {
-    font-size: 0;
-    border-right: 0; }
-  .header__link_cart {
-    padding-left: 10.12658227848101%;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start; }
-  .header__bottom {
-    display: none; }
-  .header__delivery {
-    display: block;
-    margin-top: 17px;
-    font-size: 15px;
-    line-height: 24px;
-    font-weight: normal;
-    margin-left: 84px;
-    padding-left: 8%;
-    width: 100%;
-    text-align: left;
-    background-color: transparent; } }
-
-@media screen and (min-width: 1250px) {
-  .header__wrap {
-    padding: 0 50px; }
-  .header__logo_link {
-    display: block;
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
-    width: calc(100% - (100% - 249px));
-    padding: 0;
-    border-width: 0;
-    border-bottom: 1px solid #ececec;
-    padding-left: 4%; }
-  .header__site_menu {
-    position: static;
+            align-items: center; }
+  .header__logo_img {
+    width: 115px;
+    height: auto;
+    margin-top: 6px; }
+  .header__menu {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-ordinal-group: 1;
-        -ms-flex-order: 0;
-            order: 0;
-    width: 44%;
-    margin: 0;
-    font-size: 17px;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start; }
-    .header__site_menu .header__item_catalog {
-      width: 47%;
-      border-right: 1px solid #ececec;
-      padding-left: 50px; }
-    .header__site_menu .header__item_order {
-      padding-left: 35px;
-      width: 53%; }
-    .header__site_menu .header__link {
-      height: 88px;
-      -webkit-box-pack: start;
-          -ms-flex-pack: start;
-              justify-content: flex-start; }
+    position: static; }
+    .header__menu .header__link {
+      height: 87px; }
   .header__user_menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    width: 344px;
+    margin: 0;
+    border: 0;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1; }
+  .header__item_search .header__link {
+    width: 84px;
+    border: 0;
+    border-left: 1px solid #ececec;
+    border-right: 1px solid #ececec; }
+  .header__item_search .header__link_span {
+    display: none; }
+  .header__item_cart {
+    width: 265px; }
+    .header__item_cart .header__link {
+      border: 0;
+      width: 100%; }
+    .header__item_cart .header__link_inner {
+      width: 100%; }
+    .header__item_cart .header__link_span {
+      padding-left: 24px; }
+  .header__delivery {
+    position: absolute;
+    display: block;
+    top: 105px;
+    left: 63.80208333333333%;
+    font-size: 15px;
+    line-height: 24px;
+    font-weight: normal;
+    width: 100%;
+    text-align: left;
+    background-color: transparent; }
+  .header__site_menu {
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin: 0;
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2;
-    width: calc(100% - 44% - 249px); }
-    .header__user_menu .header__link {
-      border-bottom: 0; }
-  .header__link_inner {
-    margin-left: 4px; }
-  .header__link_span {
-    display: inline-block;
-    vertical-align: baseline;
-    margin-bottom: 3px; }
-  .header__menu .header__bottom {
-    display: block;
-    margin: 0;
-    margin-top: 18px;
-    height: auto;
+    background-color: transparent;
+    left: 4px;
+    top: 72px; }
+    .header__site_menu .header__item {
+      height: auto; }
+    .header__site_menu .header__link {
+      border: 0;
+      padding: 0;
+      font-size: 15px; }
+  .header__item_order {
+    margin-left: 36px; } }
+
+@media screen and (min-width: 1250px) {
+  .page__header {
     width: 100%;
-    font-size: 15px; }
-  .header__menu .header__top {
-    border-bottom: 1px solid #ececec;
-    height: 88px; }
-  .header__new {
-    width: 47%;
-    padding-left: 50px; }
+    border-top: 1px solid #ececec;
+    background-color: #ffffff;
+    z-index: 1; }
+  .header__wrap {
+    width: 1050px;
+    height: 87px; }
+  .header__label {
+    display: none; }
+  .main_nav {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    position: relative; }
+  .header__logo_link {
+    margin: 0;
+    width: 150px;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .header__logo_img {
+    width: 149px;
+    height: auto;
+    margin-top: 6px; }
+  .header__menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: static; }
+    .header__menu .header__link {
+      height: 87px; }
+  .header__user_menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    width: 450px;
+    margin: 0;
+    border: 0;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    padding-left: 100px; }
+  .header__item_search .header__link {
+    width: 84px;
+    border: 0;
+    border-left: 1px solid #ececec;
+    border-right: 1px solid #ececec; }
+  .header__item_search .header__link_span {
+    display: none; }
+  .header__item_cart {
+    width: 265px; }
+    .header__item_cart .header__link {
+      border: 0;
+      width: 100%; }
+    .header__item_cart .header__link_inner {
+      width: 100%; }
+    .header__item_cart .header__link_span {
+      padding-left: 24px; }
+  .header__delivery {
+    position: absolute;
+    display: block;
+    top: 105px;
+    left: 78.0952380952381%;
+    font-size: 15px;
+    line-height: 24px;
+    font-weight: normal;
+    width: 100%;
+    text-align: left;
+    background-color: transparent; }
+  .header__site_menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    width: 450px;
+    margin: 0;
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
+    background-color: transparent;
+    left: 4px;
+    top: 72px; }
+    .header__site_menu .header__item {
+      height: auto; }
+    .header__site_menu .header__link {
+      border: 0;
+      padding: 0;
+      font-size: 17px; }
+  .header__item_order {
+    margin-left: 35px;
+    border-left: 1px solid #ececec;
+    padding-left: 35px; }
+  .header__new,
   .header__sale {
-    width: 53%;
-    padding-left: 34px; } }
+    display: block;
+    position: absolute;
+    top: 75px;
+    left: 0; }
+    .header__new .header__link,
+    .header__sale .header__link {
+      font-size: 15px; }
+  .header__sale {
+    left: 220px; } }
