--- a/sass/home.scss
+++ b/sass/home.scss
@@ -13,6 +13,10 @@
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    background-image: url("../img/hero-mobile@2x.jpg");
+  }
 }
 
 .main__title {
@@ -97,14 +101,18 @@
   }
 
   .home__wrap {
-    min-height: 755px;
     background-image: url("../img/hero-tablet@1x.jpg");
     background-size: 172%;
     background-position: 50% 0;
+    min-height: 755px;
     width: 668px;
     margin: 0 auto;
     position: relative;
     background-color: #fafafa;
+
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url("../img/hero-tablet@2x.jpg");
+    }
   }
 
   .main__title {
@@ -174,11 +182,10 @@
     left: 0;
     width: 100%;
     height: 25px;
-    background-image: url("../img/wave.png");
-    background-size: 40px 24px;
-    background-position: bottom left;
-    background-repeat: repeat-x;
-    z-index: 999;
+    background-image: url("../img/bg-zigzag-fill.svg");
+    background-size: 100% 34px;
+    background-position: -5px left;
+    z-index: 1;
   }
 }
 
@@ -188,12 +195,22 @@
     top: -42px;
   }
 
+  .home {
+    width: 100%;
+    margin: 0 auto;
+  }
+
   .home__wrap {
     min-height: 755px;
     width: 1050px;
     margin: 0 auto;
-    background-size: 100%;
-    background-position: 50% -15px;
+    background-image: url("../img/hero-desktop@1x.jpg");
+    background-size: 117%;
+    background-position: 50% -25px;
+
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url("../img/hero-desktop@2x.jpg");
+    }
   }
 
   .main__title {
@@ -201,8 +218,7 @@
     line-height: 57px;
     width: auto;
     position: relative;
-    left: 10px;
-    top: 138px;
+    top: 136px;
   }
 
   .home__inner {
@@ -227,5 +243,9 @@
     top: -5px;
     font-size: 20px;
     line-height: 30px;
+  }
+
+  .home__img {
+    left: 0;
   }
 }
