--- a/sass/home.scss
+++ b/sass/home.scss
@@ -93,11 +93,11 @@
 @media screen and (min-width: 768px) {
   .page__main {
     position: relative;
-    top: -65px;
   }
 
   .home {
     position: relative;
+    width: 100vw;
   }
 
   .home__wrap {
@@ -180,11 +180,12 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     height: 25px;
     background-image: url("../img/bg-zigzag-fill.svg");
-    background-size: 100% 34px;
+    background-size: 1250px 34px cover;
     background-position: -5px left;
+    background-repeat: repeat-x;
     z-index: 1;
   }
 }
@@ -192,7 +193,7 @@
 @media screen and (min-width: 1250px) {
   .page__main {
     position: relative;
-    top: -42px;
+    width: 100%;
   }
 
   .home {
