--- a/sass/home.scss
+++ b/sass/home.scss
@@ -180,7 +180,7 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 25px;
     background-image: url("../img/bg-zigzag-fill.svg");
     background-size: 1250px 34px cover;
