--- a/sass/industry.scss
+++ b/sass/industry.scss
@@ -1,13 +1,13 @@
 .industry {
-  margin-top: 30px;
-  padding: 0 30px;
+  width: 100%;
+  margin-top: 20px;
 }
 
 .industry__title {
   font-weight: bold;
   font-size: 17px;
   line-height: 24px;
-  padding: 30px 90px;
+  padding: 30px 90px 25px 90px;
   background-image: url("../img/icon-video.svg");
   background-position: 34px;
   background-repeat: no-repeat;
@@ -17,12 +17,16 @@
   font-weight: normal;
   font-size: 13px;
   line-height: 24px;
-  padding: 0 30px;
-  margin-top: 30px;
+  padding: 0 33px;
+  padding-right: 35px;
+  margin-top: 22px;
 }
 
 .industry__wrap {
   position: relative;
+  width: 260px;
+  margin: 0 auto;
+  border: 1px solid #ececec;
 }
 
 .industry__inner {
@@ -38,11 +42,6 @@
   }
 }
 
-.industry__img {
-  width: 100%;
-  margin: 0 auto;
-}
-
 .industry__icon {
   position: absolute;
   top: 50%;
@@ -54,8 +53,10 @@
 
 .industry__link {
   margin: 0 30px;
-  margin-top: 30px;
-  padding: 15px 24px;
+  margin-top: 25px;
+  margin-bottom: 27px;
+  padding: 15px 25px;
   box-sizing: border-box;
-  display: block;
+  display: inline-block;
+  vertical-align: baseline;
 }
