--- a/sass/form.scss
+++ b/sass/form.scss
@@ -1,32 +1,31 @@
-.form {
-  padding: 0 30px;
-}
-
 .main__title_wrap {
   background-color: #f1f1f1;
   height: 176px;
   display: flex;
-  align-items: center;
 }
 
 .page__text {
   padding: 0 30px;
-  margin-top: 30px;
+  margin-top: 21px;
   font-weight: normal;
   font-size: 13px;
   line-height: 24px;
 }
 
 .form__form {
-  margin-top: 30px;
+  width: 260px;
+  margin: 0 auto;
+  margin-top: 25px;
 }
 
 .form__fieldset_type {
-  margin-top: 35px;
+  .form__label_radio:last-child {
+    margin-top: 23px;
+  }
 }
 
 .form__fieldset_color {
-  margin-top: 40px;
+  margin-top: 44px;
 }
 
 .form__fieldset_name {
@@ -43,11 +42,14 @@
   border: 0;
   position: relative;
   display: flex;
+  padding: 0;
+  margin-left: 0;
+  margin-right: 0;
 
   &::before {
     position: absolute;
     content: "";
-    top: 0;
+    top: 8px;
     right: 0;
     width: 200px;
     height: 1px;
@@ -68,13 +70,13 @@
 
 .form__label_radio {
   position: relative;
-  margin-top: 40px;
+  margin-top: 35px;
   padding-left: 63px;
 
   &::before {
     position: absolute;
     content: "";
-    top: 0;
+    top: -9px;
     left: 0;
     width: 40px;
     height: 40px;
@@ -88,7 +90,7 @@
   &::after {
     position: absolute;
     content: "";
-    top: 12px;
+    top: 3px;
     left: 12px;
     width: 16px;
     height: 16px;
@@ -99,14 +101,14 @@
 }
 
 .form__label_checkbox {
+  margin-top: 43px;
   position: relative;
-  margin-top: 45px;
   padding-left: 63px;
 
   &::before {
     position: absolute;
     content: "";
-    top: 0;
+    top: -13px;
     left: 0;
     width: 40px;
     height: 40px;
@@ -119,15 +121,20 @@
   &::after {
     position: absolute;
     content: "";
-    top: 0;
-    left: 0;
+    top: -12px;
+    left: 0px;
     width: 40px;
     height: 40px;
     background-image: url("../img/icon-tick.svg");
     background-position: center center;
     background-repeat: no-repeat;
+    background-size: 60%;
     box-sizing: border-box;
   }
+}
+
+.form__label_checkbox:first-of-type {
+  margin-top: 37px;
 }
 
 .form__label {
