--- a/sass/page__footer.scss
+++ b/sass/page__footer.scss
@@ -5,6 +5,10 @@
   background-color: #f1f1f1;
 }
 
+.page__footer_cart {
+  margin-top: 55px;
+}
+
 .page__footer_wrap {
   min-height: 160px;
   padding: 0 30px;
