--- a/css/home.css
+++ b/css/home.css
@@ -82,20 +82,19 @@
   opacity: 0.3; }
 
 @media screen and (min-width: 768px) {
-  .page__main {
-    position: relative; }
   .home {
     position: relative;
-    width: 100vw; }
+    width: 100%; }
   .home__wrap {
     background-image: url("../img/hero-tablet@1x.jpg");
     background-size: 172%;
-    background-position: 50% 0;
-    min-height: 755px;
+    background-position: 50% -40px;
+    min-height: 715px;
     width: 668px;
     margin: 0 auto;
     position: relative;
-    background-color: #fafafa; } }
+    background-color: #fafafa;
+    padding-top: 43px; } }
   @media screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 768px) and (min-resolution: 144dpi), screen and (min-width: 768px) and (min-resolution: 1.5dppx) {
     .home__wrap {
       background-image: url("../img/hero-tablet@2x.jpg"); } }
@@ -105,9 +104,7 @@
     font-size: 43px;
     line-height: 50px;
     width: auto;
-    margin-top: 18px;
-    position: relative;
-    top: 135px; }
+    margin-bottom: 443px; }
   .home__inner {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -131,8 +128,7 @@
     .home__item:hover {
       -webkit-transform: translateY(-5px);
               transform: translateY(-5px);
-      height: 130px;
-      border-radius: 5.5%; }
+      height: 130px; }
   .home__link {
     height: 100%;
     width: 100%;
@@ -155,7 +151,9 @@
   .home__img {
     margin-left: 51%;
     -webkit-transition: 0.7s;
-    transition: 0.7s; }
+    transition: 0.7s;
+    height: 61px;
+    width: auto; }
   .home__separator {
     position: absolute;
     bottom: 0;
@@ -169,19 +167,16 @@
     z-index: 1; } }
 
 @media screen and (min-width: 1250px) {
-  .page__main {
-    position: relative;
-    width: 100%; }
   .home {
-    width: 100%;
-    margin: 0 auto; }
+    width: 100%; }
   .home__wrap {
-    min-height: 755px;
+    min-height: 707px;
     width: 1050px;
     margin: 0 auto;
     background-image: url("../img/hero-desktop@1x.jpg");
     background-size: 117%;
-    background-position: 50% -25px; } }
+    background-position: 50% -50px;
+    height: auto; } }
   @media screen and (min-width: 1250px) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 1250px) and (min-resolution: 144dpi), screen and (min-width: 1250px) and (min-resolution: 1.5dppx) {
     .home__wrap {
       background-image: url("../img/hero-desktop@2x.jpg"); } }
@@ -191,8 +186,7 @@
     font-size: 53px;
     line-height: 57px;
     width: auto;
-    position: relative;
-    top: 136px; }
+    margin-bottom: 430px; }
   .home__inner {
     width: 1050px;
     min-width: 1050px; }
