--- a/css/about_us.css
+++ b/css/about_us.css
@@ -50,11 +50,10 @@
 
 @media screen and (min-width: 768px) {
   .about_us {
-    margin-top: -27px; }
+    padding-top: 51px; }
   .about_us__wrap {
-    width: 668px;
-    margin: 0 auto;
-    padding: 0; }
+    width: 675px;
+    margin: 0 auto; }
   .about_us__title {
     font-size: 43px;
     line-height: 50px; }
@@ -66,7 +65,7 @@
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    width: 668px; }
+    width: 100%; }
   .about_us__item {
     min-height: 95px;
     font-size: 20px;
@@ -75,8 +74,7 @@
     background-repeat: no-repeat;
     padding-top: 55px;
     margin-top: 28px;
-    width: 324px;
-    margin-left: 10px; }
+    width: 50%; }
     .about_us__item_eco {
       -webkit-box-ordinal-group: 2;
           -ms-flex-order: 1;
@@ -110,18 +108,16 @@
 
 @media screen and (min-width: 1250px) {
   .about_us {
-    margin-top: 205px; }
+    padding-top: 60px; }
   .about_us__wrap {
-    width: 668px;
-    margin: 0 auto;
-    padding: 0; }
+    width: 705px;
+    margin: 0 auto; }
   .about_us__title {
     font-size: 53px;
     line-height: 57px; }
   .about_us__list {
     margin-top: 17px;
-    width: 700px;
-    margin-left: -7px; }
+    width: 700px; }
   .about_us__item {
-    width: 350px;
+    width: 50%;
     margin-left: 0; } }
