--- a/sass/reviews.scss
+++ b/sass/reviews.scss
@@ -82,13 +82,18 @@
 @media screen and (min-width: 768px) {
   .reviews {
     margin-top: 85px;
+    background-image: url("../img/bg-zigzag-line.svg");
+    background-size: auto 17px;
+    background-position: left bottom;
+    background-repeat: repeat-x;
+    min-height: 540px;
   }
 
   .reviews__wrap {
     padding: 0;
     display: flex;
     flex-wrap: wrap;
-    width: 748px;
+    width: 768px;
     margin: 0 auto;
     order: 1;
   }
@@ -148,6 +153,7 @@
 @media screen and (min-width: 1250px) {
   .reviews {
     margin-top: 98px;
+    background-size: auto 23px;
   }
 
   .reviews__wrap {
@@ -159,7 +165,7 @@
   .reviews__title {
     font-size: 53px;
     line-height: 57px;
-    margin-top: 70px;
+    margin-top: 65px;
     margin-left: -178px;
   }
 
@@ -167,7 +173,6 @@
     position: relative;
     width: 175px;
     height: 52px;
-    margin-top: 78px;
     margin-left: auto;
   }
 
